@@ -10,7 +10,9 @@ Note to packagers:
  - BUGS file has been merged into README.
  - Rename (again) doc/ AsciiDoc files to end in '.adoc'.
  - Default keybindings have been moved to external tigrc file, which is
-   installed to ${sysconfdir} by default.
+   installed to ${sysconfdir} by default. As a fallback, a version of the tigrc
+   file is also included inside the binary. Pass `NO_BUILTIN_TIGRC=y` to not
+   include the tigrc and reduce the size of the binary.
 
 Incompatibilities:
 
